update api create and get list patients (add field medical_desciption, note_for_nurses)
