# controller/patient_services/model/patient.model.go
@@ -6,17 +6,19 @@ type PatientModelView struct {
 }
 
 type PatientModel struct {
-	ID          string `db:"id" json:"id"`
-	Avatar      string `db:"avatar" json:"avatar"`
-	FullName    string `db:"full_name" json:"full_name"`
-	PhoneNumber string `db:"phone_number" json:"phone_number"`
-	Old         int    `db:"old" json:"old"`
-	DOB         string `db:"dob" json:"dob"`
-	CitizenID   string `db:"citizen_id" json:"citizen_id"`
-	Ward        string `db:"ward" json:"ward"`
-	District    string `db:"district" json:"district"`
-	City        string `db:"city" json:"city"`
-	Address     string `db:"address" json:"address"`
+	ID                 string `db:"id" json:"id"`
+	Avatar             string `db:"avatar" json:"avatar"`
+	FullName           string `db:"full_name" json:"full_name"`
+	PhoneNumber        string `db:"phone_number" json:"phone_number"`
+	Old                int    `db:"old" json:"old"`
+	DOB                string `db:"dob" json:"dob"`
+	CitizenID          string `db:"citizen_id" json:"citizen_id"`
+	Ward               string `db:"ward" json:"ward"`
+	District           string `db:"district" json:"district"`
+	City               string `db:"city" json:"city"`
+	Address            string `db:"address" json:"address"`
+	MedicalDescription string `db:"medical_description" json:"medical_description"`
+	NoteForNurses      string `db:"note_for_nurses" json:"note_for_nurses"`
 }
 
 type TechniqueModel struct {
