# docs/swagger.json
@@ -609,6 +609,12 @@
                 "full_name": {
                     "type": "string"
                 },
+                "medical_description": {
+                    "type": "string"
+                },
+                "note_for_nurses": {
+                    "type": "string"
+                },
                 "phone_number": {
                     "type": "string"
                 },
